<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.iotivity.service.easysetup.BLEActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/lablestatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="20dp"
            android:elegantTextHeight="true"
            android:text="@string/test_status"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/not_started"
            android:textColor="@android:color/background_light"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter Enroller's SSID" />


        <EditText
            android:id="@+id/enrolleeSsid"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Enter Enroller's Password" />


        <EditText
            android:id="@+id/enrolleePass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="Device information"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/devicenamelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Device Name:"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/devicename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_toRightOf="@id/devicenamelabel"
            android:text="@string/not_available"

            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/uuidLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/devicenamelabel"
            android:layout_gravity="center_horizontal"
            android:text="UUID:"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/devicename"
            android:layout_gravity="center_horizontal"
            android:layout_toRightOf="@id/uuidLable"
            android:text="@string/not_available"

            android:textAppearance="?android:attr/textAppearanceSmall" />


        <TextView
            android:id="@+id/hardAddrLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/uuidLable"
            android:layout_gravity="center_horizontal"
            android:text="MAC Address:"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/hardAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/uuid"
            android:layout_gravity="center_horizontal"
            android:layout_toRightOf="@id/hardAddrLable"
            android:text="@string/not_available"
            android:textAppearance="?android:attr/textAppearanceSmall" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startSetup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:elegantTextHeight="true"
            android:text="@string/startSetup"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/stopSetup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startSetup"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:elegantTextHeight="true"
            android:enabled="false"
            android:text="@string/stopSetup"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>